--- a/Flight.Application/Flight.Application.csproj
+++ b/Flight.Application/Flight.Application.csproj
@@ -6,4 +6,19 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="MediatR" Version="12.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Flights\Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Flight.Domain\Flight.Domain.csproj" />
+    <ProjectReference Include="..\Flight.Infrastructure\Flight.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
