--- a/Flight.Web/Flight.Web.csproj
+++ b/Flight.Web/Flight.Web.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -17,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Flight.Application\Flight.Application.csproj" />
     <ProjectReference Include="..\Flight.Infrastructure\Flight.Infrastructure.csproj" />
   </ItemGroup>
 
