--- a/Flight.Infrastructure/Flight.Infrastructure.csproj
+++ b/Flight.Infrastructure/Flight.Infrastructure.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="NewFolder\**" />
+    <EmbeddedResource Remove="NewFolder\**" />
+    <None Remove="NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Migrations\" />
   </ItemGroup>
 
@@ -20,7 +26,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Flight.Domain\Flight.Domain.csproj" />
+	  <ProjectReference Include="..\Flight.Domain\Flight.Domain.csproj" />
+	  <ProjectReference Include="..\Flight.Application\Flight.Application.csproj" />
   </ItemGroup>
 
 </Project>
